--- a/app/sass/_media.sass
+++ b/app/sass/_media.sass
@@ -220,6 +220,9 @@
   .img-tablet
     display: block
 
+  .participation-rules
+    margin: 32px 0 0
+
 
 /* Extra Small Devices, Phones */
 @media only screen and (max-width: 635px)
@@ -418,6 +421,14 @@
       margin: 0
     .quote
       margin: 0 0 32px
+
+  .list-number
+    margin: 0
+    ul
+      padding: 0
+
+  .list-number > li ul
+    padding: 0
 
 /* Custom, iPhone Retina */
 @media only screen and (max-width: 320px)
