--- a/app/sass/_media.sass
+++ b/app/sass/_media.sass
@@ -172,7 +172,7 @@
     margin: 0 0 20px
 
   .scroll-wrapper
-    width: calc(100% + 40px)
+    //width: calc(100% + 40px)
     overflow-x: auto
 
   .list-category-project
@@ -429,6 +429,14 @@
 
   .list-number > li ul
     padding: 0
+
+  .list-alphabet
+    min-width: 690px
+    padding: 0 0 10px
+    li
+      margin: 0 4px 0 0
+      a
+        white-space: nowrap
 
 /* Custom, iPhone Retina */
 @media only screen and (max-width: 320px)
