--- a/app/sass/_media.sass
+++ b/app/sass/_media.sass
@@ -172,7 +172,6 @@
     margin: 0 0 20px
 
   .scroll-wrapper
-    //width: calc(100% + 40px)
     overflow-x: auto
 
   .list-category-project
@@ -222,6 +221,9 @@
 
   .participation-rules
     margin: 32px 0 0
+
+  .list-of-participants
+    margin: 32px 0
 
 
 /* Extra Small Devices, Phones */
