--- a/app/sass/_project-page.sass
+++ b/app/sass/_project-page.sass
@@ -412,3 +412,56 @@
   font-family: $font
   color: #6C757D
   font-weight: 600
+
+.card
+  border: none
+    radius: 0
+  padding: 24px 0
+  border-bottom: 1px solid #EBEEF2
+  &:last-child
+    border: none
+
+.accordion>.card:not(:last-of-type)
+  border-bottom: 1px solid #EBEEF2
+
+.card-header
+  padding: 0
+  background: transparent
+  border: none
+  .btn
+    color: #2A2E30
+    font-size: 24px
+    font-weight: 600
+    padding: 0 0 0 45px
+    line-height: 29px
+    width: 100%
+    text-align: left
+    justify-content: flex-start
+    position: relative
+    &:before
+      content: ''
+      position: absolute
+      left: 0
+      top: 14px
+      width: 24px
+      height: 2px
+      background: #ED6D43
+
+    &:hover, &:focus
+      text-decoration: none
+  .collapsed
+    &:after
+      content: ''
+      position: absolute
+      width: 2px
+      height: 24px
+      left: 11px
+      top: 3px
+      background: #ED6D43
+
+.card-body
+  padding: 8px 0 0 45px
+  color: #6C757D
+  font-family: $font
+  font-weight: normal
+  font-size: 16px
