add page project page6

--- a/app/sass/_media.sass
+++ b/app/sass/_media.sass
@@ -225,6 +225,9 @@
   .list-of-participants
     margin: 32px 0
 
+  .reviews-fb__iframe
+    height: 321px
+
 
 /* Extra Small Devices, Phones */
 @media only screen and (max-width: 635px)
@@ -439,6 +442,9 @@
       margin: 0 4px 0 0
       a
         white-space: nowrap
+
+  .reviews-fb__iframe
+    height: 163px
 
 /* Custom, iPhone Retina */
 @media only screen and (max-width: 320px)
