--- a/app/css/main.css
+++ b/app/css/main.css
@@ -1,4 +1,18 @@
 @charset "UTF-8";
+@font-face {
+  font-family: "arial";
+  font-weight: 400;
+  font-style: normal;
+  src: url("../fonts/Arial/ArialRegular.eot");
+  src: url("../fonts/Arial/ArialRegular.eot?#iefix") format("embedded-opentype"), url("../fonts/Arial/ArialRegular.woff") format("woff"), url("../fonts/Arial/ArialRegular.ttf") format("truetype"); }
+
+@font-face {
+  font-family: "arial";
+  font-weight: 700;
+  font-style: normal;
+  src: url("../fonts/Arial/ArialBold.eot");
+  src: url("../fonts/Arial/ArialBold.eot?#iefix") format("embedded-opentype"), url("../fonts/Arial/ArialBold.woff") format("woff"), url("../fonts/Arial/ArialBold.ttf") format("truetype"); }
+
 * {
   -webkit-box-sizing: border-box;
   box-sizing: border-box;
@@ -2157,6 +2171,147 @@ footer {
   font-weight: normal;
   font-size: 16px; }
 
+.reviews-fb {
+  width: 100%;
+  margin: 0 0 32px;
+  border: 1px solid #DDDFE2;
+    border-radius: 1px;
+  overflow: hidden;
+  position: relative;
+  font-family: "Arial", sans-serif; }
+  .reviews-fb:last-child {
+    margin: 0; }
+  .reviews-fb__iframe {
+    position: relative;
+    width: 100%;
+    height: 413px; }
+    .reviews-fb__iframe-bg {
+      width: 100%;
+      height: 100%;
+      -o-object-fit: cover;
+         object-fit: cover; }
+    .reviews-fb__iframe-head {
+      position: absolute;
+      left: 0;
+      top: 0;
+      z-index: 1;
+      width: 100%;
+      background: -webkit-gradient(linear, left top, left bottom, from(rgba(0, 0, 0, 0.6)), to(rgba(0, 0, 0, 0)));
+      background: linear-gradient(180deg, rgba(0, 0, 0, 0.6) 0%, rgba(0, 0, 0, 0) 100%);
+      color: #fff;
+      padding: 8px;
+      display: -webkit-box;
+      display: -ms-flexbox;
+      display: flex;
+      -webkit-box-align: start;
+          -ms-flex-align: start;
+              align-items: flex-start;
+      -ms-flex-wrap: wrap;
+          flex-wrap: wrap; }
+    .reviews-fb__iframe-user {
+      display: -webkit-box;
+      display: -ms-flexbox;
+      display: flex;
+      -webkit-box-align: center;
+          -ms-flex-align: center;
+              align-items: center; }
+      .reviews-fb__iframe-user-name {
+        color: #fff;
+        font-weight: bold;
+        font-size: 15px;
+        text-shadow: 0px 1px 2px rgba(0, 0, 0, 0.5);
+        -webkit-font-feature-settings: 'pnum' on, 'lnum' on;
+                font-feature-settings: 'pnum' on, 'lnum' on; }
+        .reviews-fb__iframe-user-name:hover {
+          color: #ED6D43; }
+    .reviews-fb__iframe-avatar {
+      display: -webkit-box;
+      display: -ms-flexbox;
+      display: flex;
+      -webkit-box-align: center;
+          -ms-flex-align: center;
+              align-items: center;
+      -webkit-box-pack: center;
+          -ms-flex-pack: center;
+              justify-content: center;
+      border: 2px solid #FFFFFF;
+      width: 44px;
+      height: 44px;
+      min-width: 44px;
+      margin: 0 10px 0 0; }
+    .reviews-fb__iframe-time {
+      text-shadow: 0 1px 2px rgba(0, 0, 0, 0.5);
+      font-size: 13px;
+      color: #DADDE1;
+      -webkit-font-feature-settings: 'pnum' on, 'lnum' on;
+              font-feature-settings: 'pnum' on, 'lnum' on;
+      letter-spacing: -0.6px; }
+  .reviews-fb__body {
+    padding: 18px 12px 12px;
+    color: #1C1E21;
+    font-size: 14px;
+    line-height: 138%; }
+  .reviews-fb__footer {
+    padding: 14px 12px;
+    position: relative; }
+    .reviews-fb__footer:before {
+      content: '';
+      position: absolute;
+      top: 0;
+      left: 50%;
+      -webkit-transform: translate(-50%, 0);
+              transform: translate(-50%, 0);
+      width: calc(100% - 24px);
+      height: 1px;
+      background: #F0F0F0; }
+
+.list-share {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  font-size: 12px;
+  font-weight: bold;
+  -webkit-font-feature-settings: 'pnum' on, 'lnum' on;
+          font-feature-settings: 'pnum' on, 'lnum' on;
+  line-height: 14px; }
+  .list-share__icon {
+    fill: #91949B;
+    width: 14px;
+    height: 14px;
+    margin: 0 5px 0 0;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center; }
+  .list-share li {
+    margin: 0 22px 0 0; }
+    .list-share li:last-child {
+      margin: 0; }
+    .list-share li a {
+      display: -webkit-box;
+      display: -ms-flexbox;
+      display: flex;
+      -webkit-box-align: center;
+          -ms-flex-align: center;
+              align-items: center;
+      color: #7F7F7F; }
+
+.link-social {
+  width: 24px;
+  height: 24px;
+  fill: #fff;
+  margin: 0 0 0 auto; }
+
 /*==========  Desktop First  ==========*/
 /* Large Devices, Wide Screens */
 @media only screen and (max-width: 1200px) {
@@ -2329,7 +2484,9 @@ footer {
   .participation-rules {
     margin: 32px 0 0; }
   .list-of-participants {
-    margin: 32px 0; } }
+    margin: 32px 0; }
+  .reviews-fb__iframe {
+    height: 321px; } }
 
 /* Extra Small Devices, Phones */
 @media only screen and (max-width: 635px) {
@@ -2503,7 +2660,9 @@ footer {
     .list-alphabet li {
       margin: 0 4px 0 0; }
       .list-alphabet li a {
-        white-space: nowrap; } }
+        white-space: nowrap; }
+  .reviews-fb__iframe {
+    height: 163px; } }
 
 /* Custom, iPhone Retina */
 @media only screen and (max-width: 320px) {
