--- a/app/sass/_fonts.sass
+++ b/app/sass/_fonts.sass
@@ -1,4 +1,4 @@
 @import "_mixins/font-face"
 
-// +font-face("roboto-example", "../fonts/RobotoRegular/RobotoRegular")
-// +font-face("roboto-example", "../fonts/RobotoBold/RobotoBold", bold)
++font-face("arial", "../fonts/Arial/ArialRegular", 400)
++font-face("arial", "../fonts/Arial/ArialBold", 700)
