--- a/app/sass/_project-page.sass
+++ b/app/sass/_project-page.sass
@@ -465,3 +465,111 @@
   font-family: $font
   font-weight: normal
   font-size: 16px
+
+.reviews-fb
+  width: 100%
+  margin: 0 0 32px
+  border: 1px solid #DDDFE2
+    radius: 1px
+  overflow: hidden
+  position: relative
+  font-family: $arial
+  &:last-child
+    margin: 0
+  &__iframe
+    position: relative
+    width: 100%
+    height: 413px
+    &-bg
+      width: 100%
+      height: 100%
+      object-fit: cover
+    &-head
+      position: absolute
+      left: 0
+      top: 0
+      z-index: 1
+      width: 100%
+      background: linear-gradient(180deg, rgba(0, 0, 0, 0.6) 0%, rgba(0, 0, 0, 0) 100%)
+      color: #fff
+      padding: 8px
+      display: flex
+      align-items: flex-start
+      flex-wrap: wrap
+    &-user
+      display: flex
+      align-items: center
+      &-name
+        color: #fff
+        font-weight: bold
+        font-size: 15px
+        text-shadow: 0px 1px 2px rgba(0, 0, 0, 0.5)
+        font-feature-settings: 'pnum' on, 'lnum' on
+        &:hover
+          color: $accent
+    &-avatar
+      display: flex
+      align-items: center
+      justify-content: center
+      border: 2px solid #FFFFFF
+      width: 44px
+      height: 44px
+      min-width: 44px
+      margin: 0 10px 0 0
+    &-time
+      text-shadow: 0 1px 2px rgba(0, 0, 0, 0.5)
+      font-size: 13px
+      color: #DADDE1
+      font-feature-settings: 'pnum' on, 'lnum' on
+      letter-spacing: -0.6px
+  &__body
+    padding: 18px 12px 12px
+    color: #1C1E21
+    font-size: 14px
+    line-height: 138%
+
+  &__footer
+    padding: 14px 12px
+    position: relative
+    &:before
+      content: ''
+      position: absolute
+      top: 0
+      left: 50%
+      transform: translate(-50%,0)
+      width: calc(100% - 24px)
+      height: 1px
+      background: #F0F0F0
+
+.list-share
+  display: flex
+  align-items: center
+  flex-wrap: wrap
+  font-size: 12px
+  font-weight: bold
+  font-feature-settings: 'pnum' on, 'lnum' on
+  line-height: 14px
+  &__icon
+    fill: #91949B
+    width: 14px
+    height: 14px
+    margin: 0 5px 0 0
+    display: flex
+    align-items: center
+    justify-content: center
+  li
+    margin: 0 22px 0 0
+    &:last-child
+      margin: 0
+    a
+      display: flex
+      align-items: center
+      color: #7F7F7F
+
+
+.link-social
+  width: 24px
+  height: 24px
+  fill: #fff
+  margin: 0 0 0 auto
+
