--- a/app/sass/_media.sass
+++ b/app/sass/_media.sass
@@ -446,6 +446,25 @@
   .reviews-fb__iframe
     height: 163px
 
+  .reviews-box__body
+    flex-wrap: wrap
+
+  .reviews-box__content
+    order: 1
+    width: 100%
+
+  .reviews-box__img
+    margin: 0 auto 24px
+
+  .reviews-sorting-wrapper
+    flex-direction: column
+    align-items: flex-start
+    .btn
+      order: -1
+      margin: 0 auto 32px
+      max-width: 288px
+      width: 100%
+
 /* Custom, iPhone Retina */
 @media only screen and (max-width: 320px)
   /**/
