--- a/app/sass/_project-page.sass
+++ b/app/sass/_project-page.sass
@@ -398,6 +398,7 @@
     height: auto
     object-fit: contain
     width: auto
+    margin: 0 0 -1px 0
 
 .section-letters__box-content
   width: calc(100% - 64px)
@@ -618,6 +619,7 @@
     justify-content: space-between
     padding: 16px 24px
     color: #6C757D
+    border-top: 1px solid #EBEEF2
     h3
       color: #4B5257
       font-size: 24px
@@ -646,9 +648,10 @@
     display: flex
     align-items: center
     padding: 16px 24px
-    border-bottom: 1px solid #EBEEF2
+
   &__avatar
     width: 64px
+    min-width: 64px
     height: 64px
     display: flex
     align-items: center
@@ -660,11 +663,11 @@
       width: 100%
       height: 100%
       object-fit: cover
-  h4
-    font-weight: bold
-    color: #4B5257
+  &__user
+    h4
+      font-weight: bold
+      color: #4B5257
   .position-user
-    margin: 0 0 4px
     color: #6C757D
     font-family: $font
     font-size: 12.8px
@@ -673,8 +676,223 @@
     color: #B9BEC2
     font-family: $font
     font-size: 12.8px
+    margin: 4px 0 0
 
 .read-more
   margin: 14px 0 0
   font-size: 14px
   font-weight: 500
+
+.reviews-box-details
+  margin: 32px 0
+  border: none
+    radius: 0
+  .reviews-box__footer
+    background: transparent
+    padding: 16px 0
+    border-top: 1px solid #EBEEF2
+  .reviews-box__header
+    padding: 0
+  .reviews-box__body
+    flex-wrap: wrap
+    border: none
+    margin: 32px 0
+    padding: 0
+    .box-text
+      color: #6C757D
+      p
+        margin: 0 0 24px
+        &:last-child
+          margin: 0
+  .reviews-box__img
+    margin: 24px auto
+    width: 540px
+    height: 540px
+
+//add-comment
+.add-comment
+  width: 100%
+  background: #F7F8FA
+  border-radius: 8px
+  padding: 24px
+  margin: 0 0 32px
+  h3
+    width: 100%
+    margin: 0 0 16px
+    color: #2A2E30
+    font-size: 20px
+    font-weight: 600
+  .section-letters__box-photo
+    width: 40px
+    height: 40px
+  .section-letters__box-photo-default
+    border: 2px solid #FAC7AC
+    img
+      max-width: 25px
+
+.add-comment-body
+  width: 100%
+  display: flex
+  align-items: flex-start
+  flex-wrap: wrap
+
+
+.form-add-comment
+  display: flex
+  align-items: center
+  flex-wrap: wrap
+  width: calc(100% - 40px - 16px)
+  position: relative
+  margin: 0 0 0 auto
+  label
+    margin: 0
+    width: 100%
+  button
+    position: absolute
+    right: 6px
+    bottom: 3px
+    padding: 8px 8px
+    font-size: 14px
+  input
+    padding: 0 100px 0 12px
+    background: #ffffff
+    color: #000
+    height: 41px
+    &::placeholder
+      color: #6C757D
+  textarea
+    border-radius: 4px
+    background: #fff
+    padding: 8px 6px 45px 12px
+    box-shadow: 0 0 0 3.2px rgba(0, 123, 255, 0.25)
+    color: #0B0C0D
+    overflow: hidden
+    height: auto
+    box-sizing: border-box
+    display: block
+
+.form-add-comment-two
+  button
+    bottom: 8px
+
+.comments
+  h2
+    text-align: left
+    display: block
+    margin: 0 0 24px
+    color: #2A2E30
+    font-size: 32px
+    &:before
+      display: none
+
+.comments-box
+  width: 100%
+  position: relative
+  &:before
+    content: ''
+    position: absolute
+    height: 100%
+    width: 1px
+    background: #CFD2D5
+    left: 28px
+    top: 0
+    //display: none
+  >*
+    position: relative
+    z-index: 1
+  .reviews-box__avatar
+    margin: 0 12px 0 0
+    width: 56px
+    height: 56px
+    min-width: 56px
+  &__header
+    display: flex
+    align-items: flex-start
+  &__body
+    width: calc(100% - 54px)
+    margin: 0 0 0 auto
+    padding: 8px 12px 16px
+    .box-text
+      color: #6C757D
+      font-family: $font
+  &__footer
+    padding: 6px 0
+    margin: 4px 0 0
+  .list-share
+    font-size: 14px
+    font-weight: 500
+    li
+      margin: 0 24px 0 0
+      &:last-child
+        margin: 0
+  .list-share__icon
+    width: 16px
+    height: 16px
+  .section-letters__box-photo-default
+    align-items: flex-end
+    img
+      max-width: 25px
+      height: auto
+      object-fit: contain
+
+.comments-box-answer
+  margin: 0 0 0 auto
+  &:before
+    left: 20px
+  &:after
+    content: ''
+    position: absolute
+    width: 29px
+    height: 27px
+    left: -29px
+    top: 0
+    background: url("../img/comment-line.svg") no-repeat center
+      size: contain
+  .reviews-box__avatar
+    width: 40px
+    height: 40px
+    min-width: 40px
+    margin: 0 8px 0 0
+  .comments-box__body
+    width: calc(100% - 38px)
+
+
+.comments-box-parent
+  >.comment-timeline
+    >li
+      position: relative
+      &:before
+        content: ''
+        position: absolute
+        height: 100%
+        width: 1px
+        background: #CFD2D5
+        left: 20px
+        top: 0
+      &:last-child
+        &:before
+          display: none
+  >.comments-box
+    .reviews-box__avatar
+      width: 48px
+      height: 48px
+      min-width: 48px
+
+
+.comments-box-end, .comments-box-parent
+  &:before
+    display: none
+
+.comment-timeline
+  margin: 0 0 32px
+
+  .comment-timeline
+    margin: 0
+    .comment-timeline-item
+      padding: 0 0 0 56px
+
+    .comment-timeline
+      padding: 0
+      .comment-timeline-item
+        padding: 0 0 0 48px
+
