--- a/app/sass/_media.sass
+++ b/app/sass/_media.sass
@@ -233,6 +233,14 @@
   .comments-box-answer:after
     left: -29px
 
+  .sidebar
+    .sidebar-box
+      display: none
+
+  .sidebar-box
+    margin: 0 0 32px
+    &:last-child
+      margin: 0
 
 /* Extra Small Devices, Phones */
 @media only screen and (max-width: 635px)
@@ -517,6 +525,10 @@
     border-width: 1px
     img
       max-width: 15px
+
+  .reviews-box-details .reviews-box__img
+    max-width: 290px
+    height: 290px
 
 /* Custom, iPhone Retina */
 @media only screen and (max-width: 320px)
