--- a/app/sass/_project-page.sass
+++ b/app/sass/_project-page.sass
@@ -698,6 +698,7 @@
     border: none
     margin: 32px 0
     padding: 0
+    font-family: $font
     .box-text
       color: #6C757D
       p
@@ -706,7 +707,8 @@
           margin: 0
   .reviews-box__img
     margin: 24px auto
-    width: 540px
+    width: 100%
+    max-width: 540px
     height: 540px
 
 //add-comment
@@ -896,3 +898,98 @@
       .comment-timeline-item
         padding: 0 0 0 48px
 
+.info-post
+  width: 100%
+  display: flex
+  align-items: center
+  flex-wrap: wrap
+  margin: 0 0 24px
+  color: #B9BEC2
+  font-size: 12.8px
+  font-family: $font
+  a
+    color: #6C757D
+    font-weight: 600
+    margin: 0 0 0 8px
+
+.project-category
+  font-feature-settings: 'ordn' on
+  display: flex
+  align-items: flex-start
+  color: #6C757D
+  font-weight: bold
+  span
+    color: #4B5257
+    margin: 0 0 0 12px
+
+.blog-post
+  h1
+    margin: 0 0 16px
+  .reviews-box-details
+    .reviews-box__avatar
+      width: 40px
+      height: 40px
+      min-width: 40px
+    .box-text
+      margin: 0 0 32px
+      &:last-child
+        margin: 0
+    h3
+      margin: 0 0 24px
+
+.blog-post__footer
+  width: 100%
+  padding: 16px 0
+  border-top: 1px solid #EBEEF2
+
+.list-hashtag
+  display: flex
+  align-items: center
+  flex-wrap: wrap
+  font-feature-settings: 'pnum' on, 'lnum' on
+  font-weight: 500
+  li
+    margin: 0 16px 0 0
+    &:last-child
+      margin: 0
+    a
+      color: #4B5257
+      padding: 8px 0
+      &:hover
+        color: $accent
+
+.sidebar-box
+  margin: 48px 0 0
+  h3
+    margin: 0 0 16px
+    font-size: 20px
+    font-weight: 600
+    color: #0B0C0D
+  .list-hashtag
+    font-size: 14px
+    font-weight: 500
+    li
+      margin: 0 8px 4px 0
+      a
+        padding: 6px 0
+  .projects-card
+    margin: 0 0 16px
+    &:last-child
+      margin: 0
+  .projects-card__title
+    font-size: 16px
+  .reviews-box
+    margin: 0 0 16px
+    &:last-child
+      margin: 0
+  .reviews-box__header
+    padding: 16px 16px 8px
+  .reviews-box__avatar
+    width: 40px
+    height: 40px
+    min-width: 40px
+  .reviews-box__body
+    padding: 8px 16px 16px
+    h3
+      font-size: 16px
+      margin: 0 0 8px
